# cw5-skypro

./: README.md  config.py  main.py  pyproject.toml  queries.sql  requirements.txt  utils.py
api_engine/: hh_engine_class.py
db_manage/: abstact_db_manager.py  db_manager.py
